--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Un resumen de las reglas:",
   "main": "index.js",
-  "types": "module",
+  "type": "module",
   "scripts": {
     "test": "jest --watchAll --coverage",
     "lint": "eslint",
