--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "jest --watchAll --coverage",
     "lint": "eslint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "sass": "sass scss:css -w --no-source-map"
   },
   "repository": {
     "type": "git",
@@ -29,7 +30,8 @@
     "eslint-plugin-n": "^15.2.0",
     "eslint-plugin-promise": "^6.0.0",
     "husky": "^8.0.1",
-    "jest": "^28.1.0"
+    "jest": "^28.1.0",
+    "sass": "^1.52.1"
   },
   "prettier": {
     "singleQuote": true
